@@ -26,33 +26,37 @@ public class MapMaxUnitTest {
     
     @Test
     public void givenMap_whenIterated_thenReturnMaxValue() {
-        assertEquals(new Integer(38), mapMax.maxUsingIteration(map));
+        assertEquals(Integer.valueOf(38), mapMax.maxUsingIteration(map));
     }
     
     @Test
     public void givenMap_whenUsingCollectionsMax_thenReturnMaxValue() {
-        assertEquals(new Integer(38), mapMax.maxUsingCollectionsMax(map));
+        assertEquals(Integer.valueOf(38), mapMax.maxUsingCollectionsMax(map));
     }
     
     @Test
     public void givenMap_whenUsingCollectionsMaxAndLambda_thenReturnMaxValue() {
-        assertEquals(new Integer(38), mapMax.maxUsingCollectionsMaxAndLambda(map));
+        assertEquals(Integer.valueOf(38), mapMax.maxUsingCollectionsMaxAndLambda(map));
     }
     
     @Test
     public void givenMap_whenUsingCollectionsMaxAndMethodReference_thenReturnMaxValue() {
-        assertEquals(new Integer(38), mapMax.maxUsingCollectionsMaxAndMethodReference(map));
+        assertEquals(Integer.valueOf(38), mapMax.maxUsingCollectionsMaxAndMethodReference(map));
     }
     
     @Test
     public void givenMap_whenUsingStreamAndLambda_thenReturnMaxValue() {
-        assertEquals(new Integer(38), mapMax.maxUsingStreamAndLambda(map));
+        assertEquals(Integer.valueOf(38), mapMax.maxUsingStreamAndLambda(map));
     }
     
     @Test
     public void givenMap_whenUsingStreamAndMethodReference_thenReturnMaxValue() {
-        assertEquals(new Integer(38), mapMax.maxUsingStreamAndMethodReference   (map));
+        assertEquals(Integer.valueOf(38), mapMax.maxUsingStreamAndMethodReference(map));
     }
 
+    @Test
+    public void givenMap_whenUsingStreamAndLambda_thenReturnKeyOfMaxValue() {
+        assertEquals(Integer.valueOf(27), mapMax.keyOfMaxUsingStream(map));
+    }
 
 }
